fix: correction du blocker